# agent-network

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
compute-node/: Cargo.toml
compute-node/src/: config.rs  main.rs
compute-node/src/services/: agent.rs  mod.rs  node_claim.rs  node_registry.rs
dac-common/: Cargo.toml
dac-common/src/: types.rs
dac-sdk/: Cargo.toml
dac-sdk/src/: client.rs  lib.rs  pdas.rs
ipfs-adapter/: Cargo.toml
ipfs-adapter/src/: lib.rs
public-node/: Cargo.toml
public-node/src/: config.rs  main.rs
public-node/src/services/: agent.rs  mod.rs  node_claim.rs  task_execution.rs  task_validation.rs
public-node/src/utils/: mod.rs  model_validation.rs  system_info.rs
scripts/: generate_keypair.sh
solana-adapter/: Cargo.toml
solana-adapter/src/: client.rs  lib.rs  types.rs
src/: main.rs
src/adapters/: mod.rs  solana.rs
src/services/: agent.rs  dac_manager.rs  mod.rs  node_registry.rs
validator-node/: Cargo.toml
validator-node/src/: config.rs  main.rs  utils.rs
validator-node/src/services/: mod.rs  tee.rs  validator.rs
