[package]
name = "ipfs-adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "ipfs_adapter"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.13.1", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.31"
bytes = "1.11.0"
log = "0.4.29"
url = "2.5.8"
