[package]
name = "dac-validator-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dac-validator-node"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
dac-sdk = { path = "../dac-sdk" }
dotenvy = "0.15"
serde_json = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
