[package]
name = "dac-validator-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dac-validator-node"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
solana-sdk = { workspace = true }
dac-sdk = { path = "../dac-sdk" }
ipfs-adapter = { path = "../ipfs-adapter" }
dotenvy = "0.15"
serde_json = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
borsh = "1.6.0"
solana-ed25519-program = "3.0.0"
serde = { version = "1.0", features = ["derive"] }